Fix 'Umbrello crashes after undoing class attribute deletion'.

UMLClassifierListItem objects were not be added to the parent
on undo.

Also keep handling of UMLAttribute instances in sync with
UMLOperation and UMLTemplate which are only removed from the
parent classifier and not deleted.

BUG:372601
FIXED-IN:2.20.80 (KDE Applications 16.11.80)